# Ker

./: .gitignore  README.md  demo_task.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  Task.md
.github/acl/: access.yml
.github/compliance/: inventory.yml
docs/: HARDCODED_LIMITS.md
src/ker/: __init__.py  config.py  logger.py  main.py  media.py  types.py
src/ker/agent/: __init__.py  agent_config.py  agent_loop.py  subagent.py
src/ker/capture/: __init__.py  claude_parser.py  codex_parser.py
src/ker/channels/: __init__.py  base.py  cli.py  kerweb.py  kerweb_ws.py  teams.py
src/ker/gateway/: __init__.py  commands.py  delivery.py  gateway.py
src/ker/llm/: __init__.py  anthropic_provider.py  azure_openai.py  base.py  github_copilot.py  provider_factory.py
src/ker/longtask/: orchestrator.py  task_board.py  worker.py
src/ker/scheduler/: cron.py  heartbeat.py
src/ker/skills/: README.md
src/ker/tools/: __init__.py  tool_base.py  tool_capture.py  tool_cron.py  tool_evolve.py  tool_exec.py  tool_fallback.py  tool_filesystem.py  tool_longtask.py  tool_mcp.py  tool_memory.py  tool_message.py  tool_registry.py  tool_reply.py  (+3 more)
tests/: test_agent_loop.py  test_channels.py  test_config.py  test_consolidation.py  test_cron.py  test_cron_extended.py  test_delivery.py  test_evolve.py  test_fallback.py  test_gateway.py  test_llm.py  test_logger.py  test_longtask.py  test_mcp.py  test_memory.py  test_multi_agent.py  test_reply_user.py  test_scorer.py  test_session.py  test_skills.py  test_teams_channel.py  test_tools.py  test_types.py  test_working_memory.py
(+46 files in other folders)
