[project]
name = "ker"
version = "0.1.0"
description = "CLI-first extensible agent runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.52.0",
  "python-dotenv>=1.0.1",
  "croniter>=3.0.3",
  "httpx>=0.27.0",
  "mcp>=1.0",
  "websockets>=12.0",
  "duckduckgo-search>=8.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
ker = "ker.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
